/*
 * Copyright 2025 Carver Automation Corporation.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package rperf;

option go_package = "github.com/carverauto/serviceradar/cmd/checkers/rperf-client/src/proto/rperf";

// Import the local copy of monitoring.proto
import "monitoring.proto";

// RPerfService (unchanged)
service RPerfService {
  rpc RunTest(TestRequest) returns (TestResponse) {}
  rpc GetStatus(StatusRequest) returns (StatusResponse) {}
}

// RPerf-specific messages (unchanged)
message TestRequest {
  string target_address = 1;
  uint32 port = 2;
  string protocol = 3;
  bool reverse = 4;
  uint64 bandwidth = 5;
  double duration = 6;
  uint32 parallel = 7;
  uint32 length = 8;
  uint32 omit = 9;
  bool no_delay = 10;
  uint32 send_buffer = 11;
  uint32 receive_buffer = 12;
  double send_interval = 13;
}

message TestResponse {
  bool success = 1;
  string error = 2;
  string results_json = 3;
  TestSummary summary = 4;
}

message TestSummary {
  double duration = 1;
  uint64 bytes_sent = 2;
  uint64 bytes_received = 3;
  double bits_per_second = 4;
  uint64 packets_sent = 5;
  uint64 packets_received = 6;
  uint64 packets_lost = 7;
  double loss_percent = 8;
  double jitter_ms = 9;
}

message StatusRequest {}

message StatusResponse {
  bool available = 1;
  string version = 2;
  string message = 3;
}